--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # compiled output
+/build
 /dist
 /tmp
 /out-tsc
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # IDEs and editors
 /.idea
@@ -31,6 +36,14 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # System Files
 .DS_Store
